Use Integer.valueOf instead of new Integer.